--- a/client/package.json
+++ b/client/package.json
@@ -1,47 +1,14 @@
 {
-  "name": "light-bootstrap-dashboard-react",
-  "version": "2.0.0",
-  "dependencies": {
-    "@fortawesome/fontawesome-free": "5.15.2",
-    "axios": "^0.21.1",
-    "bootstrap": "4.6.0",
-    "chartist": "0.10.1",
-    "gulp": "4.0.2",
-    "gulp-append-prepend": "1.0.8",
-    "moment": "^2.29.1",
-    "node-sass": "4.14.1",
-    "react": "17.0.1",
-    "react-bootstrap": "1.4.3",
-    "react-chartist": "0.14.3",
-    "react-dom": "17.0.1",
-    "react-form": "^4.0.1",
-    "react-icons": "^4.2.0",
-    "react-notification-alert": "0.0.13",
-    "react-router": "5.2.0",
-    "react-router-dom": "5.2.0",
-    "react-scripts": "4.0.1",
-    "react-scroll": "^1.8.3",
-    "react-step-progress-bar": "^1.0.3",
-    "react-toastify": "^7.0.4",
-    "styled-components": "^5.3.0",
-    "tesseract.js": "^2.1.1"
-  },
-  "optionalDependencies": {
-    "jquery": "3.5.1",
-    "reactstrap": "8.9.0",
-    "typescript": "4.1.3"
-  },
+  "name": "client",
+  "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build && gulp licenses",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
-    "compile:scss": "node-sass src/assets/scss/light-bootstrap-dashboard-react.scss src/assets/css/light-bootstrap-dashboard-react.css",
-    "minify:scss": "node-sass src/assets/scss/light-bootstrap-dashboard-react.scss src/assets/css/light-bootstrap-dashboard-react.min.css --output-style compressed",
-    "map:scss": "node-sass src/assets/scss/light-bootstrap-dashboard-react.scss src/assets/css/light-bootstrap-dashboard-react.css --source-map true",
-    "build:scss": "npm run compile:scss && npm run minify:scss && npm run map:scss"
+    "start": "react-scripts start"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -53,5 +20,31 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "@mui/material": "^6.4.8",
+    "ajv": "^8.12.0",
+    "ajv-keywords": "^5.1.0",
+    "axios": "^1.8.3",
+    "bootstrap": "^5.3.3",
+    "moment": "^2.30.1",
+    "react-bootstrap": "^2.10.9",
+    "react-chartist": "^0.14.4",
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-router": "^7.3.0",
+    "react-router-dom": "^7.3.0",
+    "react-scripts": "^5.0.1",
+    "react-scroll": "^1.9.3",
+    "react-toastify": "^11.0.5",
+    "reactstrap": "^9.2.3",
+    "sass": "^1.85.1",
+    "schema-utils": "^4.2.0",
+    "styled-components": "^6.1.15",
+    "tesseract.js": "^6.0.0",
+    "webpack-dev-server": "^4.15.1"
   }
 }
