--- a/client/package.json
+++ b/client/package.json
@@ -31,12 +31,13 @@
     "axios": "^1.8.3",
     "bootstrap": "^5.3.3",
     "moment": "^2.30.1",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
     "react-chartist": "^0.14.4",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router": "^7.3.0",
-    "react-router-dom": "^7.3.0",
+    "react-router-dom": "^6.30.0",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.3",
     "react-toastify": "^11.0.5",
